fix app-month-picker on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -87,6 +87,10 @@ form {
     > button {
       grid-column: 1/3;
     }
+
+    [type='submit'] {
+      margin: 0 2.5rem;
+    }
   }
 }
 
